--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 .Rhistory
 *.dcf
 .Rhistory
+rsconnect/documents/app_es.R/shinyapps.io/centerforglobaldemocracy/lapop-shiny-esp.dcf
+rsconnect/shinyapps.io/centerforglobaldemocracy/lapop-shiny.dcf
