--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 .Rhistory
 rsconnect/documents/app_es.R/shinyapps.io/centerforglobaldemocracy/lapop-shiny-esp.dcf
 rsconnect/shinyapps.io/centerforglobaldemocracy/lapop-shiny.dcf
+.Rhistory
