--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 rsconnect/documents/app_es.R/shinyapps.io/centerforglobaldemocracy/lapop-shiny-esp.dcf
 rsconnect/shinyapps.io/centerforglobaldemocracy/lapop-shiny.dcf
 .Rhistory
+.Rhistory
